fix: sửa lại phần repl, interpreter và cập nhật CLI